[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "github-ai-inference"
version = "0.1.1"
description = "Serverless AI inference via GitHub Actions — no server required"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Tanish Chauhan" }]
keywords = ["ai", "llm", "inference", "github-actions", "llama", "serverless"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/TanishC4444/github-ai"
Repository = "https://github.com/TanishC4444/github-ai"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["github_ai*"]